--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
     "@clerk/nextjs": "^4.27.1",
     "@clerk/themes": "^1.7.9",
     "@hookform/resolvers": "^3.3.2",
+    "@mantine/core": "^7.2.2",
+    "@mantine/dates": "^7.2.2",
+    "@mantine/form": "^7.2.2",
+    "@mantine/hooks": "^7.2.2",
+    "@mantine/modals": "^7.2.2",
+    "@mantine/next": "^6.0.21",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@sentry/nextjs": "^7.80.1",
     "@tabler/icons-react": "^2.41.0",
     "@types/node": "20.9.2",
     "@types/react": "18.2.37",
@@ -23,12 +30,12 @@
     "class-variance-authority": "^0.7.0",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
+    "infisical-node": "^1.5.0",
     "mongoose": "^8.0.1",
     "next": "14.0.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-dropzone": "^14.2.3",
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
